src/ducks/account/AccountSwitch.styl
// TODO understand why this is necessary
// for the account switch to work on mobile
@require 'objects/*'

@require 'tools/mixins.styl'
@require 'settings/breakpoints'

.account-switch
    position relative
    padding-bottom 20px

    a
    a:visited
        color            dodgerBlue
        text-decoration  none

    a:hover
    a:active
        text-decoration  underline

.account-switch-button
    cursor pointer
    margin 10px 0
    width 100%
    padding 15px 10%
    border 0
    text-align left
    outline 0
    background  embedurl('../../assets/icons/icon-chevron-down.svg') 90% center no-repeat

    .account-name
        max-width 90%
        overflow hidden
        font-weight bold
        color charcoalGrey
        text-overflow ellipsis
        white-space nowrap

    .account-num
        margin-top 8px
        font-size .8em
        color coolGrey
        font-weight normal

    &.active
        background silver

    &:focus
        background silver

.account-switch-menu-content
    position fixed
    top 78px
    left 0
    right 0
    width 440px
    overflow auto
    z-index: 60
    max-height: "calc(100vh - %s)" % @top
    margin-left auto
    margin-right auto

    +small-screen()
        left 10px
        right 10px
        margin-left inherit
        width auto

.account-switch-menu
    margin 20px
    padding 0
    z-index 1
    overflow auto
    border solid 1px rgba(50, 54, 63, .12)
    border-radius 4px
    background white
    box-shadow 0 1px 3px 0 rgba(50, 54, 63, .19), 0 6px 18px 0 rgba(50, 54, 63, .19)

    h4
        margin 10px 0
        padding 0 19px
        font-size .8em
        color coolGrey

    ul
        list-style none
        margin 0
        padding 0


    button
        box-sizing border-box
        width 100%
        overflow hidden
        padding 8px 26px 8px 16px
        border 0
        border-left 3px solid transparent
        background 0
        color charcoalGrey
        text-overflow ellipsis
        white-space nowrap
        cursor pointer
        text-align left

        &:focus
            outline 0
            background silver

        &:hover
            background silver

    a
        display block
        text-transform uppercase
        padding 8px 19px
        font-size .8em
        font-weight bold

    .active, .active:hover
        border-left-color dodgerBlue
        background  embedurl('../../assets/icons/icon-checked-blue.svg') 98% center no-repeat
        font-weight bold

    .active:hover
        background-color silver

    .account-secondary-info
        padding-left .5em
        color coolGrey
        font-size .8em

.account-switch
    top 0
    padding 0
    border 0
    margin 0

.account-switch-button-mobile
    background-color transparent

.AccountSwitch__Select
    display inline-flex
    margin-bottom 1rem
    overflow hidden
    cursor pointer

    +small-screen()
        margin-bottom 0
        max-width 100%

.AccountSwitch__SelectText
    margin-bottom 0

.AccountSwitch--small .AccountSwitch__SelectText
    font-size 1.125rem

